@@ -19,7 +19,6 @@
       event.preventDefault();
       var checkbox = $(event.currentTarget).find("#live_searchbox_currentfolder_only");
       var original = $("#searchbox_currentfolder_only");
-      var toggeledValue = !checkbox.prop("checked");
       checkbox.trigger("change");
       doNotClose = true;
     } else {
@@ -67,7 +66,16 @@
     $("#searchbox_currentfolder_only", ul).attr("id", "live_searchbox_currentfolder_only");
     $("[for='searchbox_currentfolder_only']", ul).attr("for", "live_searchbox_currentfolder_only");
 
-    $(".folder_path", ul).on("change", function() {
+
+    var searchField = $(".folder_path", ul)
+    // label - we prevent the default behavior so we have to implement this on our own.
+    searchField.next().on("click", function(){
+      var field = $(this).prev();
+      field.prop("checked", !field.prop("checked"));
+    });
+
+    searchField.on("change", function() {
+
       if(this.checked) {
         self.option("source", source + "?path=" + this.value);
       } else {
