@@ -4,13 +4,14 @@ Changelog
 1.5.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- BugFix: Search for "current folder". Label was some kind of unclickable. :-( omg sry.
+  [mathias.leimgruber]
 
 
 1.5.2 (2016-05-20)
 ------------------
 
-- BugFix: Search for "current folder". Checkbox was unlickable.
+- BugFix: Search for "current folder". Checkbox was unclickable.
   [mathias.leimgruber]
 
 - Disable special links on facets dropdown.
